:bug: fix device layout bug

--- a/src/global.less
+++ b/src/global.less
@@ -52,7 +52,7 @@ a {
 }
 
 .ant-page-header {
-  padding: 5px 20px;
+  padding: 10px 20px;
 }
 
 @media (max-width: @screen-xs) {
